-python version is enabled for 3.6 vs 3.5

--- a/squad/Ultimate_Dataset_Preperation_From_Original_Filles.ipynb
+++ b/squad/Ultimate_Dataset_Preperation_From_Original_Filles.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jackalhan/Development/github/more_meaningful_representations/venv/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/home/jackalhan/Development/github/more_meaningful_representations/venv/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -29,18 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIR = '//media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/elmo/train/non_idf/ind_layers_-3'\n",
+    "DIR = '/media/jackalhan/45A7AAAE25473AA2/Rethinking_Running_Data_MSMARCO'\n",
     "args={\n",
     "'train_word_embeddings': 'train_word_embeddings.txt',\n",
     "'dev_word_embeddings': 'dev_word_embeddings.txt',\n",
     "'train_question_labels': 'train_question_labels.csv',\n",
     "'dev_question_labels': 'dev_question_labels.csv',\n",
-    "'train_dataset_file': 'train-v1.1.json',\n",
-    "'dev_dataset_file': 'dev-v1.1.json',\n",
+    "'train_dataset_file': 'train.json',\n",
+    "'dev_dataset_file': 'dev.json',\n",
     "    \n",
     "'train_paragraph_embeddings': 'train_paragraph_embeddings.hdf5',\n",
     "'train_question_embeddings': 'train_question_embeddings.hdf5',\n",
@@ -65,13 +65,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 203/1001 [00:00<00:00, 2023.56it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "****************************************************************************************************\n",
+      "Parsing Started\n",
+      "Generating DEV examples...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1001/1001 [00:00<00:00, 1923.58it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1030 questions in total\n",
+      "# of Paragraphs in DEV : 1001\n",
+      "# of Questions in DEV : 1030\n",
+      "# of Q_to_P DEV : 1030\n",
+      "--------------------\n",
+      "Paragraphs: Tokenization and Saving Tokenization Started in DEV\n",
+      "# of Tokenized Paragraphs in DEV : 1001\n",
+      "--------------------\n",
+      "Questions: Tokenization and Saving Tokenization Started in DEV\n",
+      "# of Tokenized Questions in DEV : 1030\n",
+      "Mapping data is dumped to /media/jackalhan/45A7AAAE25473AA2/Rethinking_Running_Data_MSMARCO/dev_question_labels.csv\n",
+      "Parsing Ended in 0.0 minutes\n",
+      "****************************************************************************************************\n",
+      "Len of Dev Questions: 1030, Len of Dev Paragraphs: 1001\n",
       "****************************************************************************************************\n",
       "Parsing Started\n",
       "Generating TRAIN examples...\n"
@@ -81,51 +118,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 442/442 [01:02<00:00,  7.08it/s]\n"
+      "100%|██████████| 100001/100001 [02:09<00:00, 770.80it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "87599 questions in total\n",
-      "# of Paragraphs in TRAIN : 18896\n",
-      "# of Questions in TRAIN : 87599\n",
-      "# of Q_to_P TRAIN : 87599\n",
+      "107949 questions in total\n",
+      "# of Paragraphs in TRAIN : 100001\n",
+      "# of Questions in TRAIN : 107949\n",
+      "# of Q_to_P TRAIN : 107949\n",
       "--------------------\n",
       "Paragraphs: Tokenization and Saving Tokenization Started in TRAIN\n",
-      "# of Tokenized Paragraphs in TRAIN : 18896\n",
+      "# of Tokenized Paragraphs in TRAIN : 100001\n",
       "--------------------\n",
       "Questions: Tokenization and Saving Tokenization Started in TRAIN\n",
-      "# of Tokenized Questions in TRAIN : 87599\n",
-      "Mapping data is dumped to //media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/elmo/train/non_idf/ind_layers_-3/train_question_labels.csv\n",
-      "Parsing Ended in 1.8166666666666667 minutes\n",
+      "# of Tokenized Questions in TRAIN : 107949\n",
+      "Mapping data is dumped to /media/jackalhan/45A7AAAE25473AA2/Rethinking_Running_Data_MSMARCO/train_question_labels.csv\n",
+      "Parsing Ended in 3.7 minutes\n",
       "****************************************************************************************************\n",
-      "Len of Train Questions: 87599, Len of Train Paragraphs: 18896\n"
+      "Len of Train Questions: 107949, Len of Train Paragraphs: 100001\n"
      ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'dev_tokenized_questions' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-03172e6d6dc3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0multimate_tokenized_questions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdev_tokenized_questions\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtrain_tokenized_questions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0multimate_tokenized_paragraphs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdev_tokenized_paragraphs\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtrain_tokenized_paragraphs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0multimate_questions_nontokenized\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdev_questions_nontokenized\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtrain_questions_nontokenized\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dev_tokenized_questions' is not defined"
-     ],
-     "output_type": "error"
     }
    ],
    "source": [
-    "# dev_tokenized_questions, \\\n",
-    "# dev_tokenized_paragraphs,\\\n",
-    "# dev_questions_nontokenized,\\\n",
-    "# dev_paragraphs_nontokenized = UTIL.prepare_squad_objects(os.path.join(DIR, args['dev_dataset_file']), 'DEV', \n",
-    "#                                                          is_dump_during_execution=True,\n",
-    "#                                                          mapping_file=os.path.join(DIR, args['dev_question_labels']))\n",
+    "dev_tokenized_questions, \\\n",
+    "dev_tokenized_paragraphs,\\\n",
+    "dev_questions_nontokenized,\\\n",
+    "dev_paragraphs_nontokenized = UTIL.prepare_squad_objects(os.path.join(DIR, args['dev_dataset_file']), 'DEV', \n",
+    "                                                         is_dump_during_execution=True,\n",
+    "                                                         mapping_file=os.path.join(DIR, args['dev_question_labels']))\n",
     "\n",
-    "# print('Len of Dev Questions: {}, Len of Dev Paragraphs: {}'.format(len(dev_tokenized_questions),\n",
-    "#                                                                   len(dev_tokenized_paragraphs)))\n",
+    "print('Len of Dev Questions: {}, Len of Dev Paragraphs: {}'.format(len(dev_tokenized_questions),\n",
+    "                                                                  len(dev_tokenized_paragraphs)))\n",
     "\n",
     "train_tokenized_questions, \\\n",
     "train_tokenized_paragraphs,\\\n",
@@ -137,64 +163,64 @@
     "                                                                  len(train_tokenized_paragraphs)))\n",
     "\n",
     "\n",
-    "ultimate_tokenized_questions = dev_tokenized_questions + train_tokenized_questions\n",
-    "ultimate_tokenized_paragraphs = dev_tokenized_paragraphs + train_tokenized_paragraphs\n",
-    "ultimate_questions_nontokenized = dev_questions_nontokenized + train_questions_nontokenized\n",
-    "ultimate_paragraphs_nontokenized = dev_paragraphs_nontokenized + train_paragraphs_nontokenized\n",
-    "print('Len of Ultimate Questions: {}, Len of Ultimate Paragraphs: {}'.format(len(ultimate_tokenized_questions),\n",
-    "                                                                  len(ultimate_tokenized_paragraphs)))\n",
+    "# ultimate_tokenized_questions = dev_tokenized_questions + train_tokenized_questions\n",
+    "# ultimate_tokenized_paragraphs = dev_tokenized_paragraphs + train_tokenized_paragraphs\n",
+    "# ultimate_questions_nontokenized = dev_questions_nontokenized + train_questions_nontokenized\n",
+    "# ultimate_paragraphs_nontokenized = dev_paragraphs_nontokenized + train_paragraphs_nontokenized\n",
+    "# print('Len of Ultimate Questions: {}, Len of Ultimate Paragraphs: {}'.format(len(ultimate_tokenized_questions),\n",
+    "#                                                                   len(ultimate_tokenized_paragraphs)))\n",
     "\n",
-    "#QUESTION LABELS #\n",
+    "# #QUESTION LABELS #\n",
     "\n",
-    "dev_question_labels = pd.read_csv(os.path.join(DIR, args['dev_question_labels']))\n",
-    "print(dev_question_labels.shape)\n",
-    "train_question_labels = pd.read_csv(os.path.join(DIR, args['train_question_labels']))\n",
-    "print(train_question_labels.shape)\n",
-    "#concate all dfs \n",
-    "frames = [dev_question_labels, train_question_labels]\n",
-    "ultimate_question_labels = pd.concat(frames, ignore_index=True)\n",
-    "del dev_question_labels, train_question_labels,frames\n",
-    "ultimate_question_labels.reset_index()\n",
-    "print(ultimate_question_labels.shape)\n",
-    "\n",
-    "\n",
-    "ultimate_question_labels.loc[ultimate_question_labels.index >= 10570, ['p'] ] = ultimate_question_labels + len(dev_tokenized_paragraphs)\n",
-    "ultimate_question_labels.loc[ultimate_question_labels.index >= 10570, ['q'] ] = ultimate_question_labels + len(dev_tokenized_questions)\n",
-    "\n",
-    "#ultimate_question_labels[ultimate_question_labels.index >= 0]\n",
-    "ultimate_question_labels.to_csv(os.path.join(DIR, args['ultimate_question_labels']), index=False)\n",
+    "# dev_question_labels = pd.read_csv(os.path.join(DIR, args['dev_question_labels']))\n",
+    "# print(dev_question_labels.shape)\n",
+    "# train_question_labels = pd.read_csv(os.path.join(DIR, args['train_question_labels']))\n",
+    "# print(train_question_labels.shape)\n",
+    "# #concate all dfs \n",
+    "# frames = [dev_question_labels, train_question_labels]\n",
+    "# ultimate_question_labels = pd.concat(frames, ignore_index=True)\n",
+    "# del dev_question_labels, train_question_labels,frames\n",
+    "# ultimate_question_labels.reset_index()\n",
+    "# print(ultimate_question_labels.shape)\n",
     "\n",
     "\n",
-    "# DATASET FILES #\n",
+    "# ultimate_question_labels.loc[ultimate_question_labels.index >= 10570, ['p'] ] = ultimate_question_labels + len(dev_tokenized_paragraphs)\n",
+    "# ultimate_question_labels.loc[ultimate_question_labels.index >= 10570, ['q'] ] = ultimate_question_labels + len(dev_tokenized_questions)\n",
     "\n",
-    "with open(os.path.join(DIR, args['ultimate_dataset_question_file']), 'w') as fout:\n",
-    "    for sentence in ultimate_tokenized_questions:\n",
-    "        cleaned_sentence = [word.replace('\\n', ' ') for word in sentence]\n",
-    "        fout.write(' '.join(cleaned_sentence) + '\\n')\n",
+    "# #ultimate_question_labels[ultimate_question_labels.index >= 0]\n",
+    "# ultimate_question_labels.to_csv(os.path.join(DIR, args['ultimate_question_labels']), index=False)\n",
     "\n",
-    "with open(os.path.join(DIR, args['ultimate_dataset_paragraph_file']), 'w') as fout:\n",
-    "    for sentence in ultimate_tokenized_paragraphs:\n",
-    "        cleaned_sentence = [word.replace('\\n', ' ') for word in sentence]\n",
-    "        fout.write(' '.join(cleaned_sentence) + '\\n')\n",
     "\n",
-    "# DOCUMENT EMBEDDINGS #\n",
+    "# # DATASET FILES #\n",
     "\n",
-    "dev_question_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['dev_question_embeddings']))\n",
-    "print(dev_question_embeddings.shape)\n",
-    "train_question_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['train_question_embeddings']))\n",
-    "print(train_question_embeddings.shape)\n",
-    "ultimate_question_embeddings = np.vstack((dev_question_embeddings, train_question_embeddings))\n",
-    "print(ultimate_question_embeddings.shape)\n",
+    "# with open(os.path.join(DIR, args['ultimate_dataset_question_file']), 'w') as fout:\n",
+    "#     for sentence in ultimate_tokenized_questions:\n",
+    "#         cleaned_sentence = [word.replace('\\n', ' ') for word in sentence]\n",
+    "#         fout.write(' '.join(cleaned_sentence) + '\\n')\n",
     "\n",
-    "dev_paragraph_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['dev_paragraph_embeddings']))\n",
-    "print(dev_paragraph_embeddings.shape)\n",
-    "train_paragraph_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['train_paragraph_embeddings']))\n",
-    "print(train_paragraph_embeddings.shape)\n",
-    "ultimate_paragraph_embeddings = np.vstack((dev_paragraph_embeddings, train_paragraph_embeddings))\n",
-    "print(ultimate_paragraph_embeddings.shape)\n",
+    "# with open(os.path.join(DIR, args['ultimate_dataset_paragraph_file']), 'w') as fout:\n",
+    "#     for sentence in ultimate_tokenized_paragraphs:\n",
+    "#         cleaned_sentence = [word.replace('\\n', ' ') for word in sentence]\n",
+    "#         fout.write(' '.join(cleaned_sentence) + '\\n')\n",
     "\n",
-    "UTIL.dump_embeddings(ultimate_question_embeddings, os.path.join(DIR, args['ultimate_question_embeddings']))\n",
-    "UTIL.dump_embeddings(ultimate_paragraph_embeddings, os.path.join(DIR, args['ultimate_paragraph_embeddings']))"
+    "# # DOCUMENT EMBEDDINGS #\n",
+    "\n",
+    "# dev_question_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['dev_question_embeddings']))\n",
+    "# print(dev_question_embeddings.shape)\n",
+    "# train_question_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['train_question_embeddings']))\n",
+    "# print(train_question_embeddings.shape)\n",
+    "# ultimate_question_embeddings = np.vstack((dev_question_embeddings, train_question_embeddings))\n",
+    "# print(ultimate_question_embeddings.shape)\n",
+    "\n",
+    "# dev_paragraph_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['dev_paragraph_embeddings']))\n",
+    "# print(dev_paragraph_embeddings.shape)\n",
+    "# train_paragraph_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['train_paragraph_embeddings']))\n",
+    "# print(train_paragraph_embeddings.shape)\n",
+    "# ultimate_paragraph_embeddings = np.vstack((dev_paragraph_embeddings, train_paragraph_embeddings))\n",
+    "# print(ultimate_paragraph_embeddings.shape)\n",
+    "\n",
+    "# UTIL.dump_embeddings(ultimate_question_embeddings, os.path.join(DIR, args['ultimate_question_embeddings']))\n",
+    "# UTIL.dump_embeddings(ultimate_paragraph_embeddings, os.path.join(DIR, args['ultimate_paragraph_embeddings']))"
    ]
   },
   {
@@ -536,13 +562,13 @@
     {
      "ename": "NameError",
      "evalue": "name 'train_questions' is not defined",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m      Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-37-2074750ba64d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_tokenized_questions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mquestion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mquestion\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_questions\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'train_questions' is not defined"
-     ],
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
@@ -1458,7 +1484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
