--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jackalhan/Development/github/more_meaningful_representations/venv/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -24,29 +33,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_data_path = \"/media/jackalhan/ext_ssd\""
+    "base_data_path = \"/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['0 --> /media/jackalhan/ext_ssd/debug_dict.pkl',\n",
-       " '16 --> /media/jackalhan/ext_ssd/Rethinking_Running_Data/dev/tfidf/source_destination_tfidf_embeddings_token_verbose_None.pkl',\n",
-       " '3 --> /media/jackalhan/ext_ssd/Rethinking_Running_Data/dev/glove/source_destination_glove_embeddings_token_verbose_None.pkl',\n",
-       " '35 --> /media/jackalhan/ext_ssd/Rethinking_Running_Data/dev/bert/bert_new_destination_tokens.pkl',\n",
-       " '48 --> /media/jackalhan/ext_ssd/Rethinking_Running_Data/train/bert/bert_new_destination_tokens.pkl']"
+       "['1 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_0.05_0.05_wd_0.001_0.001_lr_0.001_dim_8192_8192_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl',\n",
+       " '2 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_0.05_0.05_wd_0.001_0.001_lr_0.001_dim_1024_1024_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl',\n",
+       " '3 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_1_1_wd_0.001_0.001_lr_0.001_dim_7000_7000_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl',\n",
+       " '6 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_1_1_wd_0.001_0.001_lr_0.001_dim_2048_4096_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,11 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_indx =0\n",
+    "model_indx =2\n",
     "my_dict = load_from_pickle(os.path.join(base_data_path, \n",
     "                                        debug_files[model_indx]))\n",
     "num_of_epochs = my_dict['epochs']"
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -113,66 +121,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>arp</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.151376</td>\n",
+       "      <td>0.219528</td>\n",
+       "      <td>0.27654</td>\n",
+       "      <td>0.344037</td>\n",
+       "      <td>0.432503</td>\n",
+       "      <td>0.539974</td>\n",
+       "      <td>0.706422</td>\n",
        "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>102.108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>dcg</td>\n",
-       "      <td>0.296878</td>\n",
-       "      <td>0.357165</td>\n",
-       "      <td>0.386541</td>\n",
-       "      <td>0.414938</td>\n",
-       "      <td>0.445104</td>\n",
-       "      <td>0.466758</td>\n",
-       "      <td>0.48464</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>0.151376</td>\n",
+       "      <td>0.109764</td>\n",
+       "      <td>0.09218</td>\n",
+       "      <td>0.0688073</td>\n",
+       "      <td>0.0432503</td>\n",
+       "      <td>0.0269987</td>\n",
+       "      <td>0.0141284</td>\n",
        "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>map</td>\n",
-       "      <td>0.296878</td>\n",
-       "      <td>0.344655</td>\n",
-       "      <td>0.364238</td>\n",
-       "      <td>0.379991</td>\n",
-       "      <td>0.392568</td>\n",
-       "      <td>0.398554</td>\n",
-       "      <td>0.401482</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ndcg</td>\n",
-       "      <td>0.296878</td>\n",
-       "      <td>0.357165</td>\n",
-       "      <td>0.386541</td>\n",
-       "      <td>0.414938</td>\n",
-       "      <td>0.445104</td>\n",
-       "      <td>0.466758</td>\n",
-       "      <td>0.48464</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>precision</td>\n",
-       "      <td>0.296878</td>\n",
-       "      <td>0.196216</td>\n",
-       "      <td>0.150394</td>\n",
-       "      <td>0.10403</td>\n",
-       "      <td>0.0612772</td>\n",
-       "      <td>0.0349054</td>\n",
-       "      <td>0.0157502</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>mrp</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
@@ -181,45 +153,81 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>0.402797</td>\n",
+       "      <td>0.247589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>map</td>\n",
+       "      <td>0.151376</td>\n",
+       "      <td>0.185452</td>\n",
+       "      <td>0.204456</td>\n",
+       "      <td>0.219954</td>\n",
+       "      <td>0.231751</td>\n",
+       "      <td>0.239195</td>\n",
+       "      <td>0.244596</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dcg</td>\n",
+       "      <td>0.151376</td>\n",
+       "      <td>0.194375</td>\n",
+       "      <td>0.222881</td>\n",
+       "      <td>0.250744</td>\n",
+       "      <td>0.279343</td>\n",
+       "      <td>0.306497</td>\n",
+       "      <td>0.339703</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ndcg</td>\n",
+       "      <td>0.151376</td>\n",
+       "      <td>0.194375</td>\n",
+       "      <td>0.222881</td>\n",
+       "      <td>0.250744</td>\n",
+       "      <td>0.279343</td>\n",
+       "      <td>0.306497</td>\n",
+       "      <td>0.339703</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>recall</td>\n",
-       "      <td>0.296878</td>\n",
-       "      <td>0.392431</td>\n",
-       "      <td>0.451183</td>\n",
-       "      <td>0.520151</td>\n",
-       "      <td>0.612772</td>\n",
-       "      <td>0.698108</td>\n",
-       "      <td>0.787512</td>\n",
+       "      <td>arp</td>\n",
        "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>42.6972</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  eval_metric_name         1         2         3         5         10  \\\n",
-       "0              arp         -         -         -         -          -   \n",
-       "1              dcg  0.296878  0.357165  0.386541  0.414938   0.445104   \n",
-       "2              map  0.296878  0.344655  0.364238  0.379991   0.392568   \n",
-       "3             ndcg  0.296878  0.357165  0.386541  0.414938   0.445104   \n",
-       "4        precision  0.296878  0.196216  0.150394   0.10403  0.0612772   \n",
-       "5              mrp         -         -         -         -          -   \n",
-       "6           recall  0.296878  0.392431  0.451183  0.520151   0.612772   \n",
+       "  eval_metric_name         1         2         3          5         10  \\\n",
+       "0           recall  0.151376  0.219528   0.27654   0.344037   0.432503   \n",
+       "1        precision  0.151376  0.109764   0.09218  0.0688073  0.0432503   \n",
+       "2              mrp         -         -         -          -          -   \n",
+       "3              map  0.151376  0.185452  0.204456   0.219954   0.231751   \n",
+       "4              dcg  0.151376  0.194375  0.222881   0.250744   0.279343   \n",
+       "5             ndcg  0.151376  0.194375  0.222881   0.250744   0.279343   \n",
+       "6              arp         -         -         -          -          -   \n",
        "\n",
        "          20         50       all  \n",
-       "0          -          -   102.108  \n",
-       "1   0.466758    0.48464         -  \n",
-       "2   0.398554   0.401482         -  \n",
-       "3   0.466758    0.48464         -  \n",
-       "4  0.0349054  0.0157502         -  \n",
-       "5          -          -  0.402797  \n",
-       "6   0.698108   0.787512         -  "
+       "0   0.539974   0.706422         -  \n",
+       "1  0.0269987  0.0141284         -  \n",
+       "2          -          -  0.247589  \n",
+       "3   0.239195   0.244596         -  \n",
+       "4   0.306497   0.339703         -  \n",
+       "5   0.306497   0.339703         -  \n",
+       "6          -          -   42.6972  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
