-some helper execution files are added

--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jackalhan/Development/github/more_meaningful_representations/venv/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/home/jackalhan/Development/github/more_meaningful_representations/venv35/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -33,28 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_data_path = \"/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000\""
+    "base_data_path = \"/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_0.05_0.05_wd_0.001_0.001_lr_0.001_dim_8196_8196_keep_1_1_seed_66_66_loss_v3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_0.05_0.05_wd_0.001_0.001_lr_0.001_dim_8192_8192_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl',\n",
-       " '2 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_0.05_0.05_wd_0.001_0.001_lr_0.001_dim_1024_1024_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl',\n",
-       " '3 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_1_1_wd_0.001_0.001_lr_0.001_dim_7000_7000_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl',\n",
-       " '6 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_1_1_wd_0.001_0.001_lr_0.001_dim_2048_4096_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl']"
+       "['0 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_0.05_0.05_wd_0.001_0.001_lr_0.001_dim_8196_8196_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl']"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,11 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_indx =2\n",
+    "model_indx =0\n",
     "my_dict = load_from_pickle(os.path.join(base_data_path, \n",
     "                                        debug_files[model_indx]))\n",
     "num_of_epochs = my_dict['epochs']"
@@ -83,8 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
+   "execution_count": 108,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -121,26 +120,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>recall</td>\n",
-       "      <td>0.151376</td>\n",
-       "      <td>0.219528</td>\n",
-       "      <td>0.27654</td>\n",
-       "      <td>0.344037</td>\n",
-       "      <td>0.432503</td>\n",
-       "      <td>0.539974</td>\n",
-       "      <td>0.706422</td>\n",
+       "      <td>map</td>\n",
+       "      <td>0.453398</td>\n",
+       "      <td>0.516019</td>\n",
+       "      <td>0.535113</td>\n",
+       "      <td>0.549822</td>\n",
+       "      <td>0.559959</td>\n",
+       "      <td>0.564501</td>\n",
+       "      <td>0.566202</td>\n",
        "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>precision</td>\n",
-       "      <td>0.151376</td>\n",
-       "      <td>0.109764</td>\n",
-       "      <td>0.09218</td>\n",
-       "      <td>0.0688073</td>\n",
-       "      <td>0.0432503</td>\n",
-       "      <td>0.0269987</td>\n",
-       "      <td>0.0141284</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.453398</td>\n",
+       "      <td>0.578641</td>\n",
+       "      <td>0.635922</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.774757</td>\n",
+       "      <td>0.839806</td>\n",
+       "      <td>0.891262</td>\n",
        "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -153,46 +152,34 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>0.247589</td>\n",
+       "      <td>0.566902</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>map</td>\n",
-       "      <td>0.151376</td>\n",
-       "      <td>0.185452</td>\n",
-       "      <td>0.204456</td>\n",
-       "      <td>0.219954</td>\n",
-       "      <td>0.231751</td>\n",
-       "      <td>0.239195</td>\n",
-       "      <td>0.244596</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>0.453398</td>\n",
+       "      <td>0.28932</td>\n",
+       "      <td>0.211974</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.0774757</td>\n",
+       "      <td>0.0419903</td>\n",
+       "      <td>0.0178252</td>\n",
        "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>dcg</td>\n",
-       "      <td>0.151376</td>\n",
-       "      <td>0.194375</td>\n",
-       "      <td>0.222881</td>\n",
-       "      <td>0.250744</td>\n",
-       "      <td>0.279343</td>\n",
-       "      <td>0.306497</td>\n",
-       "      <td>0.339703</td>\n",
+       "      <td>0.453398</td>\n",
+       "      <td>0.532417</td>\n",
+       "      <td>0.561058</td>\n",
+       "      <td>0.587506</td>\n",
+       "      <td>0.611833</td>\n",
+       "      <td>0.628317</td>\n",
+       "      <td>0.638624</td>\n",
        "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>ndcg</td>\n",
-       "      <td>0.151376</td>\n",
-       "      <td>0.194375</td>\n",
-       "      <td>0.222881</td>\n",
-       "      <td>0.250744</td>\n",
-       "      <td>0.279343</td>\n",
-       "      <td>0.306497</td>\n",
-       "      <td>0.339703</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>arp</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
@@ -201,33 +188,45 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>42.6972</td>\n",
+       "      <td>36.7126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ndcg</td>\n",
+       "      <td>0.453398</td>\n",
+       "      <td>0.532417</td>\n",
+       "      <td>0.561058</td>\n",
+       "      <td>0.587506</td>\n",
+       "      <td>0.611833</td>\n",
+       "      <td>0.628317</td>\n",
+       "      <td>0.638624</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  eval_metric_name         1         2         3          5         10  \\\n",
-       "0           recall  0.151376  0.219528   0.27654   0.344037   0.432503   \n",
-       "1        precision  0.151376  0.109764   0.09218  0.0688073  0.0432503   \n",
-       "2              mrp         -         -         -          -          -   \n",
-       "3              map  0.151376  0.185452  0.204456   0.219954   0.231751   \n",
-       "4              dcg  0.151376  0.194375  0.222881   0.250744   0.279343   \n",
-       "5             ndcg  0.151376  0.194375  0.222881   0.250744   0.279343   \n",
-       "6              arp         -         -         -          -          -   \n",
+       "  eval_metric_name         1         2         3         5         10  \\\n",
+       "0              map  0.453398  0.516019  0.535113  0.549822   0.559959   \n",
+       "1           recall  0.453398  0.578641  0.635922       0.7   0.774757   \n",
+       "2              mrp         -         -         -         -          -   \n",
+       "3        precision  0.453398   0.28932  0.211974      0.14  0.0774757   \n",
+       "4              dcg  0.453398  0.532417  0.561058  0.587506   0.611833   \n",
+       "5              arp         -         -         -         -          -   \n",
+       "6             ndcg  0.453398  0.532417  0.561058  0.587506   0.611833   \n",
        "\n",
        "          20         50       all  \n",
-       "0   0.539974   0.706422         -  \n",
-       "1  0.0269987  0.0141284         -  \n",
-       "2          -          -  0.247589  \n",
-       "3   0.239195   0.244596         -  \n",
-       "4   0.306497   0.339703         -  \n",
-       "5   0.306497   0.339703         -  \n",
-       "6          -          -   42.6972  "
+       "0   0.564501   0.566202         -  \n",
+       "1   0.839806   0.891262         -  \n",
+       "2          -          -  0.566902  \n",
+       "3  0.0419903  0.0178252         -  \n",
+       "4   0.628317   0.638624         -  \n",
+       "5          -          -   36.7126  \n",
+       "6   0.628317   0.638624         -  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,6 +270,26 @@
     "df_dataset = pd.DataFrame(data=dataset, columns=top_k)\n",
     "df_dataset"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('ndcg_3', 0.37390348), ('map_2', 0.35333333333333333), ('dcg_2', 0.36040348), ('dcg_5', 0.38744393), ('recall_5', 0.44033333333333335), ('ndcg_10', 0.40131763), ('map_10', 0.3755247354497353), ('ndcg_50', 0.42750308), ('precision_10', 0.04833333333333333), ('recall_10', 0.48333333333333334), ('map_20', 0.37906500779635455), ('precision_3', 0.13577777777777778), ('map_5', 0.3698166666666666), ('precision_20', 0.02666666666666667), ('recall_1', 0.3263333333333333), ('map_3', 0.3623333333333334), ('ndcg_20', 0.4140497), ('dcg_1', 0.32633334), ('mrp_all', 0.3829111), ('recall_2', 0.38033333333333336), ('ndcg_2', 0.36040348), ('precision_2', 0.19016666666666668), ('ndcg_5', 0.38744393), ('recall_20', 0.5333333333333333), ('precision_50', 0.012013333333333334), ('dcg_50', 0.42750308), ('ndcg_1', 0.32633334), ('dcg_20', 0.4140497), ('dcg_10', 0.40131763), ('precision_5', 0.08806666666666667), ('map_1', 0.3263333333333333), ('recall_3', 0.4073333333333333), ('dcg_3', 0.37390348), ('recall_50', 0.6006666666666667), ('map_50', 0.3812627148969057), ('precision_1', 0.3263333333333333), ('arp_all', 335.42932)])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dict['1'].items()"
+   ]
   }
  ],
  "metadata": {
@@ -289,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
