--- a/squad/Ultimate_Dataset_Preperation_From_Original_Filles.ipynb
+++ b/squad/Ultimate_Dataset_Preperation_From_Original_Filles.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jackalhan/Development/github/more_meaningful_representations/venv/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/home/jackalhan/Development/github/more_meaningful_representations/venv35/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIR = '/media/jackalhan/45A7AAAE25473AA2/Rethinking_Running_Data_MSMARCO'\n",
+    "DIR = '/media/jackalhan/Samsung_T5/Rethinking_Running_Data_QUASAR-T_short'\n",
     "args={\n",
     "'train_word_embeddings': 'train_word_embeddings.txt',\n",
     "'dev_word_embeddings': 'dev_word_embeddings.txt',\n",
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 203/1001 [00:00<00:00, 2023.56it/s]"
+      "  8%|▊         | 238/3000 [00:00<00:01, 2375.22it/s]"
      ]
     },
     {
@@ -88,27 +88,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1001/1001 [00:00<00:00, 1923.58it/s]\n"
+      "100%|██████████| 3000/3000 [00:01<00:00, 1871.77it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1030 questions in total\n",
-      "# of Paragraphs in DEV : 1001\n",
-      "# of Questions in DEV : 1030\n",
-      "# of Q_to_P DEV : 1030\n",
+      "3000 questions in total\n",
+      "# of Paragraphs in DEV : 3000\n",
+      "# of Questions in DEV : 3000\n",
+      "# of Q_to_P DEV : 3000\n",
       "--------------------\n",
       "Paragraphs: Tokenization and Saving Tokenization Started in DEV\n",
-      "# of Tokenized Paragraphs in DEV : 1001\n",
+      "# of Tokenized Paragraphs in DEV : 3000\n",
       "--------------------\n",
       "Questions: Tokenization and Saving Tokenization Started in DEV\n",
-      "# of Tokenized Questions in DEV : 1030\n",
-      "Mapping data is dumped to /media/jackalhan/45A7AAAE25473AA2/Rethinking_Running_Data_MSMARCO/dev_question_labels.csv\n",
-      "Parsing Ended in 0.0 minutes\n",
+      "# of Tokenized Questions in DEV : 3000\n",
+      "Mapping data is dumped to /media/jackalhan/Samsung_T5/Rethinking_Running_Data_QUASAR-T_short/dev_question_labels.csv\n",
+      "Parsing Ended in 0.03333333333333333 minutes\n",
       "****************************************************************************************************\n",
-      "Len of Dev Questions: 1030, Len of Dev Paragraphs: 1001\n",
+      "Len of Dev Questions: 3000, Len of Dev Paragraphs: 3000\n",
       "****************************************************************************************************\n",
       "Parsing Started\n",
       "Generating TRAIN examples...\n"
@@ -118,27 +118,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100001/100001 [02:09<00:00, 770.80it/s]\n"
+      "100%|██████████| 37012/37012 [00:22<00:00, 1639.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "107949 questions in total\n",
-      "# of Paragraphs in TRAIN : 100001\n",
-      "# of Questions in TRAIN : 107949\n",
-      "# of Q_to_P TRAIN : 107949\n",
+      "37012 questions in total\n",
+      "# of Paragraphs in TRAIN : 37012\n",
+      "# of Questions in TRAIN : 37012\n",
+      "# of Q_to_P TRAIN : 37012\n",
       "--------------------\n",
       "Paragraphs: Tokenization and Saving Tokenization Started in TRAIN\n",
-      "# of Tokenized Paragraphs in TRAIN : 100001\n",
+      "# of Tokenized Paragraphs in TRAIN : 37012\n",
       "--------------------\n",
       "Questions: Tokenization and Saving Tokenization Started in TRAIN\n",
-      "# of Tokenized Questions in TRAIN : 107949\n",
-      "Mapping data is dumped to /media/jackalhan/45A7AAAE25473AA2/Rethinking_Running_Data_MSMARCO/train_question_labels.csv\n",
-      "Parsing Ended in 3.7 minutes\n",
+      "# of Tokenized Questions in TRAIN : 37012\n",
+      "Mapping data is dumped to /media/jackalhan/Samsung_T5/Rethinking_Running_Data_QUASAR-T_short/train_question_labels.csv\n",
+      "Parsing Ended in 0.6333333333333333 minutes\n",
       "****************************************************************************************************\n",
-      "Len of Train Questions: 107949, Len of Train Paragraphs: 100001\n"
+      "Len of Train Questions: 37012, Len of Train Paragraphs: 37012\n"
      ]
     }
    ],
@@ -1484,7 +1484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
